# agents-disagree-experiments

./: .env.example  .gitignore  ACTION_ITEMS.md  ANALYSIS_PLAN.md  EVALUATION_METHODOLOGY.md  EXPERIMENT_PLAN.md  HANDOVER.md  LICENSE  PRE_REGISTRATION.md  README.md  RESEARCH_PIVOT.md  pyproject.toml  requirements.txt
config/: experiment_matrix.yaml  models.yaml  runspecs_v4_scale.json
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
results/: cost_log.jsonl  pilot_report.json  progress.json
reviews/: T-024-revision-report.md  T-025-final-report.md  T-026-report.md  T-028-bt-fix-report.md  T-030-report.md  T-031a-code-review-elena.md  T-031b-code-review-marcus.md  T-032-final-report.md  judge-panel-redesign.md  non-llm-quality-frameworks.md  pilot-analysis-statistical.md  pilot-analysis-theoretical.md  pilot-review-briefing.md  pilot-review-emp.md  pilot-review-mas.md  pilot-review-nlp.md  pilot-v2-judge-analysis.md  pilot-v2-statistical-viability.md  review-alternatives.md  review-devils-advocate.md  review-emp.md  review-mas.md  review-nlp.md  review-strategic.md
scripts/: analyze_decoupled.py  analyze_results.py  compute_structural_metrics.py  estimate_cost.py  export_dataset.py  generate_figures_v4.py  generate_manifest.py  reprocess_results.py  run_decoupled_eval.py  run_experiment_v4_scale.py  run_experiments.py  statistical_rigor_v2.py  validate_fixes.py  validate_setup.py
src/: __init__.py  manifest.py  runner.py
tests/: test_checkpoint.py  test_consensus.py  test_corrected_metrics.py  test_disagreement.py  test_dry_run.py  (+4 more)
(+744 files in other folders)
